k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xentrail-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: xentrail-webapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: xentrail-webapp
      labels:
        app: xentrail-webapp
    spec:
      containers:
      - image: httpd
        name: xentrail-webapp
